sumo/tests/od2trips/errors/format/amitran/begin_missing/errors.od2trips
Error: Attribute 'startTime' is missing in definition of timeSlice '0'.
Error: Loading failed.
Quitting (on error).
